# stock_analysis

./: .claudeignore  .coveragerc  .gitignore  GUIDE_DOCS.md  GUIDE_PROJECT.md  PROJECT_SPECIFICATION.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: project-context-auditor.md
.claude/audit/: 2025-11-16_context-audit-report.md  claude_audit.csv
.claude/guides/: GUIDE_DOCS.md  GUIDE_PROJECT.md  GUIDE_TODO.md
docs/: GUIDE_DOCS.md
specs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT_GUIDE.md  MODULE_AI_ANALYSIS.md  MODULE_DATA_ACQUISITION.md  MODULE_EVALUATION.md  MODULE_METRICS.md  MODULE_VISUALIZATION.md  PROJECT_OVERVIEW.md
src/: __init__.py  data_acquisition.py
todo/: 2025-11-16_CLAUDE_claudeignore-analysis.md  2025-11-16_CLAUDE_context-audit-fixes.md  2025-11-16_CLAUDE_optimize-context-auditor.md  2025-11-16_CODE_package_setup.md  2025-11-16_CODE_project_setup.md  2025-11-16_ORGA_evaluate_guide_approach.md
todo/done/: 2025-11-16_CLAUDE_context-audit-fixes.md  2025-11-16_CODE_package_setup.md
todo/learn/: 2025-11-16_ORGA_learn_coveragerc.md
